--- a/SistemaHospitalUNI/src/Medicos/FrameMedicos.form
+++ b/SistemaHospitalUNI/src/Medicos/FrameMedicos.form
@@ -432,11 +432,25 @@
             <Component class="javax.swing.JComboBox" name="jComboBox2">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
+                  <StringArray count="18">
+                    <StringItem index="0" value="7:00"/>
+                    <StringItem index="1" value="8:00"/>
+                    <StringItem index="2" value="9:00"/>
+                    <StringItem index="3" value="10:00"/>
+                    <StringItem index="4" value="11:00"/>
+                    <StringItem index="5" value="12:00"/>
+                    <StringItem index="6" value="13:00"/>
+                    <StringItem index="7" value="14:00"/>
+                    <StringItem index="8" value="15:00"/>
+                    <StringItem index="9" value="16:00"/>
+                    <StringItem index="10" value="17:00"/>
+                    <StringItem index="11" value="18:00"/>
+                    <StringItem index="12" value="19:00"/>
+                    <StringItem index="13" value="20:00"/>
+                    <StringItem index="14" value="21:00"/>
+                    <StringItem index="15" value="22:00"/>
+                    <StringItem index="16" value="23:00"/>
+                    <StringItem index="17" value="24:00"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -444,11 +458,25 @@
             <Component class="javax.swing.JComboBox" name="jComboBox3">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
+                  <StringArray count="18">
+                    <StringItem index="0" value="7:00"/>
+                    <StringItem index="1" value="8:00"/>
+                    <StringItem index="2" value="9:00"/>
+                    <StringItem index="3" value="10:00"/>
+                    <StringItem index="4" value="11:00"/>
+                    <StringItem index="5" value="12:00"/>
+                    <StringItem index="6" value="13:00"/>
+                    <StringItem index="7" value="14:00"/>
+                    <StringItem index="8" value="15:00"/>
+                    <StringItem index="9" value="16:00"/>
+                    <StringItem index="10" value="17:00"/>
+                    <StringItem index="11" value="18:00"/>
+                    <StringItem index="12" value="19:00"/>
+                    <StringItem index="13" value="20:00"/>
+                    <StringItem index="14" value="21:00"/>
+                    <StringItem index="15" value="22:00"/>
+                    <StringItem index="16" value="23:00"/>
+                    <StringItem index="17" value="24:00"/>
                   </StringArray>
                 </Property>
               </Properties>
