--- a/SistemaHospitalUNI/src/FramePrincipal/Logueo.form
+++ b/SistemaHospitalUNI/src/FramePrincipal/Logueo.form
@@ -116,6 +116,9 @@
             </Container>
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Verdana" size="11" style="0"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Usuario:"/>
               </Properties>
               <Constraints>
@@ -126,6 +129,9 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Verdana" size="11" style="0"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Password:"/>
               </Properties>
               <Constraints>
@@ -181,7 +187,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Imagenes/1434271999_personal.png"/>
+              <Image iconType="3" name="/Imagenes/usuario-icono-7991-64.png"/>
             </Property>
           </Properties>
           <Constraints>
